# devops

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  devops.toml.template  pyproject.toml  pytest.ini  ruff.toml
.github/workflows/: create-tag.yml  pytest.yml  ruff.yml
src/devops/: __init__.py
src/devops/config/: __init__.py  base.py  config.py  config_cpp.py  config_file.py  config_git.py  config_logging.py  constants.py  logging_config.py  toml.py
src/devops/cpp/: __init__.py  buggy_cpp_files.py  build_rules.py  checks.py  license_header.py  style_rules.py
src/devops/enums/: __init__.py  base.py  logging.py
src/devops/files/: __init__.py  files.py  update_changelog.py
src/devops/git/: __init__.py  github.py  tag.py
src/devops/logger/: __init__.py  logger.py
src/devops/rules/: __init__.py  result_type.py  rules.py
src/devops/scripts/: add_license_header.py  cpp_checks.py  cpp_files.py  generate_toml_template.py  get_latest_git_tag.py  update_changelog.py
src/devops/utils/: utils.py
tests/: test_init_config.py
tests/config/: __init__.py  test_base.py  test_config.py  test_config_cpp.py  test_config_file.py  test_logging_config.py  test_toml.py
tests/cpp/: test_build_rules.py  test_checks.py  test_license_header.py  test_style_rules.py
tests/enums/: __init__.py  test_base.py  test_logging.py
tests/files/: test_files.py  test_update_changelog.py
tests/git/: __init__.py  test_tag.py
tests/rules/: test_rules.py
tests/scripts/: test_cpp_checks.py  test_cpp_checks_cli.py  test_update_changelog_cli.py
tests/utils/: test_utils.py
